--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ethers": "^5.4.0",
+    "@rainbow-me/rainbowkit": "^2.0.7",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-popups": "^19.4.52",
+    "@tanstack/react-query": "^5.36.0",
+    "ethers": "^5.4.0",
     "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
+    "viem": "^2.10.5",
+    "wagmi": "^2.8.7",
     "web3": "^1.8.2",
     "web3.storage": "^4.5.4",
     "web3modal": "^1.9.12"
