--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@rainbow-me/rainbowkit": "^2.0.7",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@tanstack/react-query": "^5.36.0",
+    "@web3-storage/w3up-client": "^13.0.1",
+    "cloudinary-react": "^1.8.1",
     "ethers": "^5.4.0",
     "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
@@ -22,7 +26,7 @@
     "viem": "^2.10.5",
     "wagmi": "^2.8.7",
     "web3": "^1.8.2",
-    "web3.storage": "^4.5.4",
+    "web3.storage": "^3.1.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
