--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
     "autoprefixer": "^10.4.13",
     "hardhat": "^2.13.0",
     "postcss": "^8.4.21",
